--- a/pages/accesorio.html
+++ b/pages/accesorio.html
@@ -80,7 +80,7 @@
         alt="collar de perro rosa"
       />
       <div class="card-body">
-        <h5 class="card-title">Collar Aplle recargable</h5>
+        <h5 class="card-title">Collar Apple recargable</h5>
         <p class="card-text">
           Some quick example text to build on the card title and make up the
           bulk of the card's content.
