--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cutie Pets</a>
+        <a class="navbar-brand" href="index.html">Cutie Pets</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -110,9 +110,7 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>En compras Online</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+              <p>Aprovecha estos increibles descuentos en nuestro local</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -122,10 +120,8 @@
               alt="perros navideños"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+              <h5>Accesorios Navideños</h5>
+              <p>Para que tu mascota tambien disfrute las fiestas!</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -135,10 +131,8 @@
               alt="perro asomandose"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+              <h5>Quedate en casa</h5>
+              <p>Nosotros te llevamos las compras!!</p>
             </div>
           </div>
         </div>
@@ -169,7 +163,7 @@
       crossorigin="anonymous"
     ></script>
     <footer>
-      <div class="container-fluid">
+      <div class="container-fluid w-100">
         <div class="flex">
           <div class="footer_icon">
             <i class="fa-brands fa-facebook"></i>
