--- a/pages/accesorio.html
+++ b/pages/accesorio.html
@@ -10,125 +10,192 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!--FONTAWESOME-->
     <script
       src="https://kit.fontawesome.com/c486483e18.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Style -->
     <link rel="stylesheet" href="../css/style.css" />
+    <!--Animate-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cutie Pets</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
-                >Inicio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contactenos</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Productos
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="accesorio.html">Accesorios</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="alimento.html"
-                    >Alimento Balanceado</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-              </ul>
-            </li>
-          </ul>
+    <!--HEADER-->
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Cutie Pets</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contactenos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Productos
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="accesorio.html"
+                      >Accesorios</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="alimento.html"
+                      >Alimento Balanceado</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <h1 class="animate__animaited animate__bounceIn">NUESTROS PRODUCTOS</h1>
+    <div class="row mt-4">
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarVerde.png"
+            class="card-img-center p-4"
+            alt="collar para perro color verde"
+          />
+          <div class="card-body">
+            <h4>Collar Neopreno Verde</h4>
+            <hr />
+            <p class="text-muted">
+              Collar ajustable de neopreno suave acolchado de nailon
+              transpirable
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
         </div>
       </div>
-    </nav>
-    <div class="card" style="width: 18rem">
-      <img
-        src="../images/collarApple.png"
-        class="card-img-top"
-        alt="collar de perro rosa"
-      />
-      <div class="card-body">
-        <h5 class="card-title">Collar Apple recargable</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarApple.png"
+            class="card-img-center p-4"
+            alt="collar apple"
+          />
+          <div class="card-body">
+            <h4>Collar Apple recargable</h4>
+            <hr />
+            <p class="text-muted">
+              Collar reflectante para perro con etiqueta de aire de Apple,
+              resistente con soporte para AirTag
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarColores.png"
+            class="card-img-center p-4"
+            alt="collar para perro de colores"
+          />
+          <div class="card-body">
+            <h4>Collar Led</h4>
+            <hr />
+            <p class="text-muted">
+              Collar reflectante para perro, neopreno suave y acolchado
+              diferentes colores para elegir
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarRosa.png"
+            class="card-img-center p-4"
+            alt="collar para perro rosa con negro"
+          />
+          <div class="card-body">
+            <h4>Collar Rosa con negro</h4>
+            <hr />
+            <p class="text-muted">
+              Collar reflectante para perro con hebilla de bloqueo de seguridad.
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarTactico.png"
+            class="card-img-center p-4"
+            alt="collar tactico para perro"
+          />
+          <div class="card-body">
+            <h4>Collar Tactico</h4>
+            <hr />
+            <p class="text-muted">
+              Collar táctico para perro, ajustable de nylon con asa de control
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+        <div class="card shadow">
+          <img
+            src="../images/collarBrilloso.png"
+            class="card-img-center p-4"
+            alt="collar para perro brilloso"
+          />
+          <div class="card-body">
+            <h4>Collar Brillante</h4>
+            <hr />
+            <p class="text-muted">
+              Collar LED de seguridad para perro, es recargable mediante USB,
+              tiene luz intermitente impermeable
+            </p>
+            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="card" style="width: 18rem">
-      <img
-        src="../images/collarColores.png"
-        class="card-img-top"
-        alt="collar de perro de colores"
-      />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img
-        src="../images/collarTactico.png"
-        class="card-img-top"
-        alt="collar de perro tactico"
-      />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
