--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cutie Pets</a>
+        <a class="navbar-brand" href="../index.html">Cutie Pets</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -73,6 +73,35 @@
         </div>
       </div>
     </nav>
+    <section class="formulario">
+      <div class="titulo__form">
+        <h1 class="animate__animated animate__bounceInDown">
+          Envianos un mensaje
+        </h1>
+      </div>
+      <p class="parrafo_form">
+        Estaremos contentos en darte una respuesta a tus preguntas!
+      </p>
+      <form action="">
+        <fieldset>
+          <legend>Formulario de Contacto</legend>
+          <label for="nombre">Nombre</label>
+          <input type="text" name="nombre" id="nombre" />
+          <br />
+          <label for="mail">Correo Electronico</label>
+          <input type="text" name="mail" id="mail" />
+          <br />
+          <label for="celular">Celular</label>
+          <input type="text" name="celular" id="celular" />
+          <br />
+          <label for="mensaje">Tu Mensaje</label>
+          <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+          <div>
+            <input type="submit" value="Enviar" />
+          </div>
+        </fieldset>
+      </form>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
