--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -73,6 +73,20 @@
         </div>
       </div>
     </nav>
+    <div class="card container-fluid d-md-block"></div>
+    <div class="card-body">
+      <h5 class="card-title">Acerca de nosotros</h5>
+      <p class="card-text">
+        Amamos a nuestros pets, y los cuidamos con el mismo cariño y amor que
+        nos cuidamos nosotros mismos. Nos apasiona ver que nuestros pets sean
+        felices, estén saludables y que no les falte nada. Nuestra misión es
+        compartir lo que hemos aprendido de otros, vivido en nuestras propias
+        experiencias, y leído en investigaciones. Queremos que tengas todo el
+        apoyo necesario en tu vida con tu mejor amigo/a, tu pet. Sabemos que de
+        encontrarle valor a lo que te compartimos lo compartirás con tus seres
+        queridos. Feliz petting
+      </p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
