--- a/pages/alimento.html
+++ b/pages/alimento.html
@@ -10,10 +10,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/c486483e18.js"
-      crossorigin="anonymous"
-    ></script>
+    <!--FONTAWESOME-->
+    <script src="https://kit.fontawesome.com/c486483e18.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--ANIMACIONES-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Style -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
@@ -35,12 +37,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="../index.html"
-                  >Inicio</a
-                >
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -60,14 +57,10 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="accesorio.html"
-                      >Accesorios</a
-                    >
+                    <a class="dropdown-item" href="accesorio.html">Accesorios</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="alimento.html"
-                      >Alimento Balanceado</a
-                    >
+                    <a class="dropdown-item" href="alimento.html">Alimento Balanceado</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                 </ul>
@@ -77,17 +70,71 @@
         </div>
       </nav>
     </header>
-    <div class="container p-4 m-2"></div>
+    <div class="container_alimentos p-4 m-2">
       <h1>Alimentos Balanceados</h1>
-      <p class="text-muted">
-        Tenemos una gran variedad de productos disponibles y alimentos de
-        primera calidad
-      </p>
-    
-    <div class="row">
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+      <p class="text-muted">Tenemos una gran variedad de productos disponibles y alimentos de primera calidad</p>
+
+      <div class="row mt-3">
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento1.png" class="card-img-top" alt="alimento balanceado caudillo" />
+            <div class="card-body">
+              <h5 class="card-title">Caudillo x18kg</h5>
+              <p class="card-text">Alimento completo para perros. Sabores: pollo/carne/pescado - $3500.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento2.png" class="card-img-top" alt="alimento balanceado chacal" />
+            <div class="card-body">
+              <h5 class="card-title">Chacal x22kg</h5>
+              <p class="card-text">Alimento completo para perros. Sabor carne - $3599.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento3.png" class="card-img-top" alt="alimento balanceado Voraz" />
+            <div class="card-body">
+              <h5 class="card-title">Voraz x20kg</h5>
+              <p class="card-text">Alimento para perros adultos. Varios sabores - $5500.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento4.png" class="card-img-top" alt="alimento balanceado Proplan" />
+            <div class="card-body">
+              <h5 class="card-title">Proplan x20kg</h5>
+              <p class="card-text">Alimento OptiAge Active Mind, para perros adultos, razas pequeñas - $9500.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento5.png" class="card-img-top" alt="alimento balanceado Dogpro" />
+            <div class="card-body">
+              <h5 class="card-title">DogPro x20kg</h5>
+              <p class="card-text">Alimento de primera calidad para perros adultos, sabor mix - $9300.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card" style="width: 18rem">
+            <img src="../images/alimento6.png" class="card-img-top" alt="alimento balanceado Rosco" />
+            <div class="card-body">
+              <h5 class="card-title">Rosco x22kg</h5>
+              <p class="card-text">Alimento Perros Mix Balanceado Rosco Cocktail - $4670.-</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
