--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!--FONTAWESOME-->
     <script
       src="https://kit.fontawesome.com/c486483e18.js"
       crossorigin="anonymous"
     ></script>
+    <!--ANIMACIONES-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
