--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--SEO-->
+    <meta name="description" content="tienda de productos para perros, accesorios y alimento balanceado con envio a domicilio" />
+    <meta name="keywords" content="MASCOTAS, PERROS, ALIMENTO, BALANCEADO, INICIO, PET, SHOP, TIENDA, ENVIO, COLLARES" />
     <title>Pet Shop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -111,6 +114,29 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
+    <hr class="rule" />
+    <div class="row text-start align-items-center gy-2 my-2">
+      <div class="col-12 col-md-4">
+        <img src="images/arnes-perro.png" alt="dos perros con pretal" class="w-60 h-80" />
+      </div>
+      <div class="col-12 col-md-6">
+        <div>
+          <h2 class="display-4">Pretales Importados</h2>
+          <p>Ofrecemos la mejor calidad en pretales para perros. Varios modelos y colores.</p>
+        </div>
+      </div>
+    </div>
+    <div class="map-responsive">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.629981129271!2d-58.21473798518932!3d-34.7649126735511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32f357d7eb011%3A0x460abb29282e0d6b!2sC.%20144%201500%2C%20B1884LVL%20Berazategui%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670940232528!5m2!1ses-419!2sar"
+        width="100%"
+        height="200"
+        style="border: 1"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
 
     <script
