--- a/pages/accesorio.html
+++ b/pages/accesorio.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pet Shop</title>
+    <!--SEO-->
+    <meta name="description" content="tienda de productos para perros, accesorios, collares para perros, collares con luces, de neopren, tacticos, diferentes tamaños y colores" />
+    <meta name="keywords" content="COLLARES, LED, TACTICO, APPLE, MASCOTAS, PERROS, ALIMENTO, BALANCEADO, INICIO, PET, SHOP, TIENDA, ENVIO, COLLARES" />
+    <title>Accesorios para perros</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
