--- a/pages/alimento.html
+++ b/pages/alimento.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pet Shop</title>
+    <!--SEO-->
+    <meta name="description" content="tienda de productos para perros, alimento balanceado con envio a domicilio, diferentes marcas para perros adultos y cachorros" />
+    <meta name="keywords" content="ROSCO, VORAZ, CHACAL, CAUDILLO, PROPLAN, MASCOTAS, PERROS, ALIMENTO, BALANCEADO, INICIO, PET, SHOP, TIENDA, ENVIO, COLLARES" />
+    <title>Alimento Balanceado</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
