--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pet Shop</title>
+    <!--SEO-->
+    <meta name="description" content="Formulario de contacto de la tienda de productos para mascotas" />
+    <meta name="keywords" content="FORMULARIO, CONTACTO, MASCOTAS, PERROS, ALIMENTO, BALANCEADO, INICIO, PET, SHOP, TIENDA, ENVIO, COLLARES" />
+    <title>Formulario de Contacto</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
