--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pet Shop</title>
+    <!--SEO-->
+    <meta name="description" content="Acerca de nosotros, tienda de productos para mascotas, cutie pets, pet shop" />
+    <meta name="keywords" content="NOSOTROS, MASCOTAS, PERROS, ALIMENTO, BALANCEADO, INICIO, PET, SHOP, TIENDA, ENVIO, COLLARES" />
+    <title>Nosotros</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
