--- a/pages/accesorio.html
+++ b/pages/accesorio.html
@@ -91,106 +91,105 @@
         </div>
       </nav>
     </header>
-
-    <h1 class="animate__animaited animate__bounceIn">NUESTROS PRODUCTOS</h1>
-    <div class="row mt-4">
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarVerde.png" class="card-img-center p-4" alt="collar para perro color verde" />
-          <div class="card-body">
-            <h4>Collar Neopreno Verde</h4>
-            <hr />
-            <p class="text-muted">Collar ajustable de neopreno suave acolchado de nailon transpirable</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+    <main>
+      <h1 class="animate__animaited animate__bounceIn">NUESTROS PRODUCTOS</h1>
+      <div class="row mt-4">
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarVerde.png" class="card-img-center p-4" alt="collar para perro color verde" />
+            <div class="card-body">
+              <h4>Collar Neopreno Verde</h4>
+              <hr />
+              <p class="text-muted">Collar ajustable de neopreno suave acolchado de nailon transpirable</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarApple.png" class="card-img-center p-4" alt="collar apple" />
+            <div class="card-body">
+              <h4>Collar Apple recargable</h4>
+              <hr />
+              <p class="text-muted">Collar reflectante para perro con etiqueta de aire de Apple, resistente con soporte para AirTag</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarColores.png" class="card-img-center p-4" alt="collar para perro de colores" />
+            <div class="card-body">
+              <h4>Collar Led</h4>
+              <hr />
+              <p class="text-muted">Collar reflectante para perro, neopreno suave y acolchado diferentes colores para elegir</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarRosa.png" class="card-img-center p-4" alt="collar para perro rosa con negro" />
+            <div class="card-body">
+              <h4>Collar Rosa con negro</h4>
+              <hr />
+              <p class="text-muted">Collar reflectante para perro con hebilla de bloqueo de seguridad.</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarTactico.png" class="card-img-center p-4" alt="collar tactico para perro" />
+            <div class="card-body">
+              <h4>Collar Tactico</h4>
+              <hr />
+              <p class="text-muted">Collar táctico para perro, ajustable de nylon con asa de control</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+          <div class="card shadow">
+            <img src="../images/collarBrilloso.png" class="card-img-center p-4" alt="collar para perro brilloso" />
+            <div class="card-body">
+              <h4>Collar Brillante</h4>
+              <hr />
+              <p class="text-muted">Collar LED de seguridad para perro, es recargable mediante USB, tiene luz intermitente impermeable</p>
+              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarApple.png" class="card-img-center p-4" alt="collar apple" />
-          <div class="card-body">
-            <h4>Collar Apple recargable</h4>
-            <hr />
-            <p class="text-muted">Collar reflectante para perro con etiqueta de aire de Apple, resistente con soporte para AirTag</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarColores.png" class="card-img-center p-4" alt="collar para perro de colores" />
-          <div class="card-body">
-            <h4>Collar Led</h4>
-            <hr />
-            <p class="text-muted">Collar reflectante para perro, neopreno suave y acolchado diferentes colores para elegir</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarRosa.png" class="card-img-center p-4" alt="collar para perro rosa con negro" />
-          <div class="card-body">
-            <h4>Collar Rosa con negro</h4>
-            <hr />
-            <p class="text-muted">Collar reflectante para perro con hebilla de bloqueo de seguridad.</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarTactico.png" class="card-img-center p-4" alt="collar tactico para perro" />
-          <div class="card-body">
-            <h4>Collar Tactico</h4>
-            <hr />
-            <p class="text-muted">Collar táctico para perro, ajustable de nylon con asa de control</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-        <div class="card shadow">
-          <img src="../images/collarBrilloso.png" class="card-img-center p-4" alt="collar para perro brilloso" />
-          <div class="card-body">
-            <h4>Collar Brillante</h4>
-            <hr />
-            <p class="text-muted">Collar LED de seguridad para perro, es recargable mediante USB, tiene luz intermitente impermeable</p>
-            <a href="#" class="btn btn-sm btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="container_footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__div d-flex flex-column align-items-center justify-content-between">
+          <div class="footer__top d-inline-flex flex-row align-items-center mt-3">
+            <p class="footer__p mt-3 mx-3 fs-5">Copyright <b>Cutie Pets</b> Todos los derechos reservados.</p>
+          </div>
+          <div class="footer__redes">
+            <ul class="redes__ul">
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fs-2 m-3"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#instagram" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#facebook" /></svg
-            ></a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
