--- a/pages/alimento.html
+++ b/pages/alimento.html
@@ -48,6 +48,7 @@
         />
       </symbol>
     </svg>
+    <!--header-->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -91,103 +92,102 @@
         </div>
       </nav>
     </header>
-    <div class="container_alimentos p-4 m-2">
-      <h1 class="animate__animaited animate__bounceIn">Alimentos Balanceados</h1>
-      <p class="text-muted">Tenemos una gran variedad de productos disponibles y alimentos de primera calidad</p>
+    <main>
+      <div class="container_alimentos p-4 m-2">
+        <h1 class="animate__animaited animate__bounceIn">Alimentos Balanceados</h1>
+        <p class="text-muted">Tenemos una gran variedad de productos disponibles y alimentos de primera calidad</p>
 
-      <div class="row mt-3">
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento1.png" class="card-img-top" alt="alimento balanceado caudillo" />
-            <div class="card-body">
-              <h5 class="card-title">Caudillo x18kg</h5>
-              <p class="card-text">Alimento completo para perros. Sabores: pollo/carne/pescado - $3500.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+        <div class="row mt-3 text-center">
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento1.png" class="card-img-top" alt="alimento balanceado caudillo" />
+              <div class="card-body">
+                <h5 class="card-title">Caudillo x18kg</h5>
+                <p class="card-text">Alimento completo para perros. Sabores: pollo/carne/pescado - $3500.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento2.png" class="card-img-top" alt="alimento balanceado chacal" />
-            <div class="card-body">
-              <h5 class="card-title">Chacal x22kg</h5>
-              <p class="card-text">Alimento completo para perros. Sabor carne - $3599.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento2.png" class="card-img-top" alt="alimento balanceado chacal" />
+              <div class="card-body">
+                <h5 class="card-title">Chacal x22kg</h5>
+                <p class="card-text">Alimento completo para perros. Sabor carne - $3599.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento3.png" class="card-img-top" alt="alimento balanceado Voraz" />
-            <div class="card-body">
-              <h5 class="card-title">Voraz x20kg</h5>
-              <p class="card-text">Alimento para perros adultos. Varios sabores - $5500.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento3.png" class="card-img-top" alt="alimento balanceado Voraz" />
+              <div class="card-body">
+                <h5 class="card-title">Voraz x20kg</h5>
+                <p class="card-text">Alimento para perros adultos. Varios sabores - $5500.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento4.png" class="card-img-top" alt="alimento balanceado Proplan" />
-            <div class="card-body">
-              <h5 class="card-title">Proplan x20kg</h5>
-              <p class="card-text">Alimento OptiAge Active Mind, para perros adultos, razas pequeñas - $9500.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento4.png" class="card-img-top" alt="alimento balanceado Proplan" />
+              <div class="card-body">
+                <h5 class="card-title">Proplan x20kg</h5>
+                <p class="card-text">Alimento OptiAge Active Mind, para perros adultos, razas pequeñas - $9500.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento5.png" class="card-img-top" alt="alimento balanceado Dogpro" />
-            <div class="card-body">
-              <h5 class="card-title">DogPro x20kg</h5>
-              <p class="card-text">Alimento de primera calidad para perros adultos, sabor mix - $9300.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento5.png" class="card-img-top" alt="alimento balanceado Dogpro" />
+              <div class="card-body">
+                <h5 class="card-title">DogPro x20kg</h5>
+                <p class="card-text">Alimento de primera calidad para perros adultos, sabor mix - $9300.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card" style="width: 18rem">
-            <img src="../images/alimento6.png" class="card-img-top" alt="alimento balanceado Rosco" />
-            <div class="card-body">
-              <h5 class="card-title">Rosco x22kg</h5>
-              <p class="card-text">Alimento Perros Mix Balanceado Rosco Cocktail - $4670.-</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card" style="width: 18rem">
+              <img src="../images/alimento6.png" class="card-img-top" alt="alimento balanceado Rosco" />
+              <div class="card-body">
+                <h5 class="card-title">Rosco x22kg</h5>
+                <p class="card-text">Alimento Perros Mix Balanceado Rosco Cocktail - $4670.-</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="container_footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__div d-flex flex-column align-items-center justify-content-between">
+          <div class="footer__top d-inline-flex flex-row align-items-center mt-3">
+            <p class="footer__p mt-3 mx-3 fs-5">Copyright <b>Cutie Pets</b> Todos los derechos reservados.</p>
+          </div>
+          <div class="footer__redes">
+            <ul class="redes__ul">
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fs-2 m-3"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#instagram" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#facebook" /></svg
-            ></a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
