--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,6 +47,7 @@
         />
       </symbol>
     </svg>
+    <!--header-->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -90,61 +91,61 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="formulario">
+        <div class="titulo__form">
+          <h1 class="animate__animated animate__bounceInDown">Envianos un mensaje</h1>
+        </div>
+        <p class="parrafo_form">Estaremos contentos en darte una respuesta a tus preguntas!</p>
+        <form action="">
+          <fieldset class="set-form">
+            <legend>Formulario de Contacto</legend>
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre" />
+            <br />
+            <label for="mail">Correo Electronico</label>
+            <input type="text" name="mail" id="mail" />
+            <br />
+            <label for="celular">Celular</label>
+            <input type="text" name="celular" id="celular" />
+            <br />
+            <label for="mensaje">Tu Mensaje</label>
+            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+            <div>
+              <input type="submit" value="Enviar" />
+            </div>
+          </fieldset>
+        </form>
+      </section>
+    </main>
 
-    <section class="formulario">
-      <div class="titulo__form">
-        <h1 class="animate__animated animate__bounceInDown">Envianos un mensaje</h1>
-      </div>
-      <p class="parrafo_form">Estaremos contentos en darte una respuesta a tus preguntas!</p>
-      <form action="">
-        <fieldset class="set-form">
-          <legend>Formulario de Contacto</legend>
-          <label for="nombre">Nombre</label>
-          <input type="text" name="nombre" id="nombre" />
-          <br />
-          <label for="mail">Correo Electronico</label>
-          <input type="text" name="mail" id="mail" />
-          <br />
-          <label for="celular">Celular</label>
-          <input type="text" name="celular" id="celular" />
-          <br />
-          <label for="mensaje">Tu Mensaje</label>
-          <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-          <div>
-            <input type="submit" value="Enviar" />
-          </div>
-        </fieldset>
-      </form>
-    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="container_footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__div d-flex flex-column align-items-center justify-content-between">
+          <div class="footer__top d-inline-flex flex-row align-items-center mt-3">
+            <p class="footer__p mt-3 mx-3 fs-5">Copyright <b>Cutie Pets</b> Todos los derechos reservados.</p>
+          </div>
+          <div class="footer__redes">
+            <ul class="redes__ul">
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fs-2 m-3"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#instagram" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#facebook" /></svg
-            ></a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
