--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,6 +47,7 @@
         />
       </symbol>
     </svg>
+    <!--HEADER-->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -90,48 +91,47 @@
         </div>
       </nav>
     </header>
-
-    <div class="card container-fluid d-md-block"></div>
-    <div class="card-body">
-      <h2 class="card-title animate__animaited animate__bounceIn">Acerca de nosotros</h2>
-      <p class="card-text">
-        Amamos a nuestros pets, y los cuidamos con el mismo cariño y amor que nos cuidamos nosotros mismos. Nos apasiona ver que nuestros pets sean felices, estén saludables y que no les falte nada.
-        Nuestra misión es compartir lo que hemos aprendido de otros, vivido en nuestras propias experiencias, y leído en investigaciones. Queremos que tengas todo el apoyo necesario en tu vida con tu
-        mejor amigo/a, tu pet. Sabemos que de encontrarle valor a lo que te compartimos lo compartirás con tus seres queridos. Feliz petting
-      </p>
-    </div>
-    <div class="nosotros_image">
-      <img src="../images/mascotas.png" alt="mascotas asomadas" />
-    </div>
+    <main>
+      <div class="card container-fluid d-md-block align-items-center"></div>
+      <div class="card-body">
+        <h2 class="card-title animate__animaited animate__bounceIn">Acerca de nosotros</h2>
+        <p class="card-text">
+          Amamos a nuestros pets, y los cuidamos con el mismo cariño y amor que nos cuidamos nosotros mismos. Nos apasiona ver que nuestros pets sean felices, estén saludables y que no les falte nada.
+          Nuestra misión es compartir lo que hemos aprendido de otros, vivido en nuestras propias experiencias, y leído en investigaciones. Queremos que tengas todo el apoyo necesario en tu vida con
+          tu mejor amigo/a, tu pet. Sabemos que de encontrarle valor a lo que te compartimos lo compartirás con tus seres queridos. Feliz petting
+        </p>
+      </div>
+      <div class="card_image">
+        <img src="../images/mascotas.png" alt="mascotas asomadas" class="mb-4 mb-md-0 col-12 col-md-4 col-xl-3 col-xxl-2" />
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="container_footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__div d-flex flex-column align-items-center justify-content-between">
+          <div class="footer__top d-inline-flex flex-row align-items-center mt-3">
+            <p class="footer__p mt-3 mx-3 fs-5">Copyright <b>Cutie Pets</b> Todos los derechos reservados.</p>
+          </div>
+          <div class="footer__redes">
+            <ul class="redes__ul">
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fs-2 m-3"></i></a>
+              </li>
+              <li class="redes__ul--li d-inline">
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fs-2 m-3"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#instagram" /></svg
-            ></a>
-          </li>
-          <li class="ms-3">
-            <a class="text-muted" href="#"
-              ><svg class="bi" width="24" height="24"><use xlink:href="#facebook" /></svg
-            ></a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
