--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
         <div class="footer__div d-flex flex-column align-items-center justify-content-between">
