--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -102,7 +102,7 @@
         </p>
       </div>
       <div class="card_image">
-        <img src="../images/mascotas.png" alt="mascotas asomadas" class="mb-4 mb-md-0 col-12 col-md-4 col-xl-3 col-xxl-2" />
+        <img src="../images/mascotas.png" alt="mascotas asomadas" class="mb-4 col-12" />
       </div>
     </main>
     <script
