--- a/index.html
+++ b/index.html
@@ -121,18 +121,21 @@
       </div>
     </main>
 
-    <hr class="rule" />
-    <div class="row text-start align-items-center gy-2 my-2">
-      <div class="col-12 col-md-4">
-        <img src="images/arnes-perro.png" alt="dos perros con pretal" class="w-60 h-80" />
-      </div>
-      <div class="col-12 col-md-6">
-        <div>
-          <h2 class="display-4">Pretales Importados</h2>
-          <p>Ofrecemos la mejor calidad en pretales para perros. Varios modelos y colores.</p>
+    <div class="container-index m-5">
+      <hr class="rule" />
+      <div class="row text-start align-items-center gy-2 my-2">
+        <div class="col-12 col-md-4">
+          <img src="images/arnes-perro.png" alt="dos perros con pretal" class="w-60 h-80" />
+        </div>
+        <div class="col-12 col-md-6">
+          <div>
+            <h2 class="display-4">Pretales Importados</h2>
+            <p>Ofrecemos la mejor calidad en pretales para perros. Varios modelos y colores.</p>
+          </div>
         </div>
       </div>
     </div>
+
     <div class="map-responsive">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.629981129271!2d-58.21473798518932!3d-34.7649126735511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32f357d7eb011%3A0x460abb29282e0d6b!2sC.%20144%201500%2C%20B1884LVL%20Berazategui%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670940232528!5m2!1ses-419!2sar"
@@ -151,26 +154,30 @@
       crossorigin="anonymous"
     ></script>
     <!-- FOOTER -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer__div d-flex flex-column align-items-center justify-content-between">
-          <div class="footer__top d-inline-flex flex-row align-items-center mt-3">
-            <p class="footer__p mt-3 mx-3 fs-5">Copyright <b>Cutie Pets</b> Todos los derechos reservados.</p>
-          </div>
-          <div class="footer__redes">
-            <ul class="redes__ul">
-              <li class="redes__ul--li d-inline">
-                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fs-2 m-3"></i></a>
-              </li>
-              <li class="redes__ul--li d-inline">
-                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fs-2 m-3"></i></a>
-              </li>
-              <li class="redes__ul--li d-inline">
-                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fs-2 m-3"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <footer>
+      <div class="container-footer">
+        <!-- REDES SOCIALES -->
+        <section class="redes">
+          <h6>
+            Encontranos en nuestras redes
+            <div class="iconosredes">
+              <a class="redes__icon text-light" href="https://www.instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram" alt="Instagram"></i>
+              </a>
+              <a class="redes__icon text-light" href="https://www.facebook.com/" target="_blank">
+                <i class="fa-brands fa-square-facebook" alt="Facebook"></i>
+              </a>
+              <a class="redes__icon text-light" href="https://wa.me/" target="_blank">
+                <i class="fa-brands fa-whatsapp" alt="Whatsapp"></i>
+              </a>
+            </div>
+            <div class="copyright">
+              © Copyright 2022 | Creada por
+              <a class="link" href="https://www.linkedin.com/in/marcela-schenone-7b0352189/">Marcela Schenone</a>
+              <br />Todos los derechos reservados.<br />
+            </div>
+          </h6>
+        </section>
       </div>
     </footer>
   </body>
