--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -97,25 +97,27 @@
           <h1 class="animate__animated animate__bounceInDown">Envianos un mensaje</h1>
         </div>
         <p class="parrafo_form">Estaremos contentos en darte una respuesta a tus preguntas!</p>
-        <form action="">
-          <fieldset class="set-form">
-            <legend>Formulario de Contacto</legend>
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre" />
-            <br />
-            <label for="mail">Correo Electronico</label>
-            <input type="text" name="mail" id="mail" />
-            <br />
-            <label for="celular">Celular</label>
-            <input type="text" name="celular" id="celular" />
-            <br />
-            <label for="mensaje">Tu Mensaje</label>
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-            <div>
-              <input type="submit" value="Enviar" />
-            </div>
-          </fieldset>
-        </form>
+        <div class="container d-flex align-items-center">
+          <form action="">
+            <fieldset class="set-form">
+              <legend>Formulario de Contacto</legend>
+              <label for="nombre">Nombre</label>
+              <input type="text" name="nombre" id="nombre" />
+              <br />
+              <label for="mail">Correo Electronico</label>
+              <input type="text" name="mail" id="mail" />
+              <br />
+              <label for="celular">Celular</label>
+              <input type="text" name="celular" id="celular" />
+              <br />
+              <label for="mensaje">Tu Mensaje</label>
+              <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+              <div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
       </section>
     </main>
 
